Fixed z-index for modals (OCVE-266), added close button to work info modal (workinformation.html), removed repeated title attr in modal (pageview.html)

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -505,6 +505,10 @@ p.annotation-posted {
     top: 1em !important;
 } */
 
+.reveal-modal.open {
+    z-index: 9999;
+}
+
 /** CFEO Compare */
 .add-to-compare-bar {
     display: none;
